--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -62,6 +62,14 @@ const posts = (await getCollection('blog')).sort(
 				margin: 0;
 				color: rgb(var(--gray));
 			}
+			.category {
+				background: rgb(var(--gray-light));
+				color: rgb(var(--gray-dark));
+				padding: 0.15em 0.5em;
+				border-radius: 4px;
+				font-size: 0.8em;
+				margin-right: 0.5em;
+			}
 			ul li a:hover h4,
 			ul li a:hover .date {
 				color: rgb(var(--accent));
@@ -100,6 +108,7 @@ const posts = (await getCollection('blog')).sort(
 									)}
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
+										{post.data.category && <span class="category">{post.data.category}</span>}
 										<FormattedDate date={post.data.pubDate} />
 									</p>
 								</a>
